add statistical